--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   carousel_slider: any
   im_stepper: any
   flutter_rating_bar: any
+  intl: any
+  flutter_datetime_picker: any
 
 
 dev_dependencies:
